trying to fix wide image on mobile

--- a/biopage/biopage.css
+++ b/biopage/biopage.css
@@ -49,8 +49,9 @@ body {
     background:red;
     width: 100%;
     height: 90%;
-    max-width: 100%
-    overflow: hidden;
+    max-width: 100%;
+    display: flex;
+    overflow-x: auto;
 }
 .portait {
     position: absolute;
